glowing button test

--- a/teststyle.css
+++ b/teststyle.css
@@ -4,3 +4,10 @@
     background-color:red;
     border-radius:50%;
 }
+
+.glowing-button{
+    box-shadow: 0 0 5px cyan, 0 0 25px cyan;
+}
+.glowing-button:hover{
+   box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;
+}
